Fix styling for language selector on mobile

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -481,9 +481,10 @@
                 }
 
                 &--mobile {
-                    .dropdown-item {
+                    a.dropdown-item {
                         color: $green;
-                        padding-left: 2rem;
+                        text-transform: capitalize;
+                        //padding-left: 2rem;
                     }
                 }
             }
